@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Routine Libraries" version="1.3.5" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Routine Libraries" version="1.4.0" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
-		<import addon="script.module.requests" optional="true"/>
 	</requires>
 	<extension point="xbmc.python.module" library="lib" />
 	<extension point="xbmc.addon.metadata">
@@ -11,9 +10,9 @@
 		<platform>all</platform>
 		<license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
 		<source>https://github.com/Twilight0/script.module.tulip</source>
-		<news>[B]1.3.5[/B]
-- New convert function in youtube module
-- New strip accents function in cleantitle module
-- Cosmetics</news>
+		<news>[B]1.4.0[/B]
+- Adapted library to dual python 2/3 compatibility
+- Removed optional requests import
+- Removed downloader module</news>
 	</extension>
 </addon>
