@@ -27,7 +27,7 @@ except:
     # noinspection PyUnresolvedReferences
     from pysqlite2 import dbapi2 as database
 
-import control
+from . import control
 
 
 def get(definition, time_out, *args, **table):
