@@ -19,7 +19,10 @@
 '''
 
 from sys import argv
-from urlparse import parse_qsl
+try:
+    from urlparse import parse_qsl
+except ImportError:
+    from urllib.parse import parse_qsl
 
 syshandle = int(argv[1])
 sysaddon = argv[0]
