@@ -1,3 +1,10 @@
+[B]1.4.0[/B]
+- Adapted library to dual python 2/3 compatibility
+- Removed optional requests import
+- Removed downloader module
+- Removed unicode logging ability from log module
+- Removed parsedom module, using client.parsedom instead
+
 [B]1.3.5[/B]
 - New convert function in youtube module
 - New strip accents function in cleantitle module
